add vectors (bouncing ball)

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
           <a href="0. Randomness/index.html">0. Randomness</a>
         </li>
       </ul>
+        <li>
+          <a href="1. Vectors/index.html">1. Vectors</a>
+        </li>
     </div>
 
   </main>
