--- a/1. Vectors/ball.html
+++ b/1. Vectors/ball.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="">
 
@@ -6,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
   <script src="../p5/p5.js"></script>
-  <script src="perlin_noise.js"></script>
+  <script src="ball.js"></script>
 </head>
 
 <body>
