--- a/1. Vectors/index.html
+++ b/1. Vectors/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="">
 
@@ -17,15 +16,27 @@
     <main>
       <div>
         <div class="plots-grid double-column">
+          <!-- <div class="plot-container"> -->
+          <!--   <div class="plot-item" id="walker"> -->
+          <!--     <p>Bouncing ball</p> -->
+          <!--     <iframe src="ball.html" width="100%" height="96%"></iframe> -->
+          <!--   </div> -->
+          <!-- </div> -->
+          <!-- <div class="plot-container"> -->
+          <!--   <div class="plot-item" id="walker"> -->
+          <!--     <p>Ballon with wind</p> -->
+          <!--     <iframe src="ballon.html" width="100%" height="96%"></iframe> -->
+          <!--   </div> -->
+          <!-- </div> -->
           <div class="plot-container">
             <div class="plot-item" id="walker">
-              <p>Bouncing ball</p>
-              <iframe src="ball.html" width="100%" height="96%"></iframe>
+              <p>Liquid</p>
+              <iframe src="liquid.html" width="100%" height="96%"></iframe>
             </div>
           </div>
         </div>
       </div>
-    </main>
+  </main>
   </div>
 </body>
 
