--- a/1. Vectors/index.html
+++ b/1. Vectors/index.html
@@ -28,10 +28,18 @@
           <!--     <iframe src="ballon.html" width="100%" height="96%"></iframe> -->
           <!--   </div> -->
           <!-- </div> -->
+          <!-- <div class="plot-container"> -->
+          <!--   <div class="plot-item" id="walker"> -->
+          <!--     <p>Liquid</p> -->
+          <!--     <iframe src="liquid.html" width="100%" height="96%"></iframe> -->
+          <!--   </div> -->
+          <!-- </div> -->
+
+
           <div class="plot-container">
             <div class="plot-item" id="walker">
-              <p>Liquid</p>
-              <iframe src="liquid.html" width="100%" height="96%"></iframe>
+              <p>Gravity</p>
+              <iframe src="gravity.html" width="100%" height="96%"></iframe>
             </div>
           </div>
         </div>
