--- a/1. Vectors/index.html
+++ b/1. Vectors/index.html
@@ -16,26 +16,24 @@
     <main>
       <div>
         <div class="plots-grid double-column">
-          <!-- <div class="plot-container"> -->
-          <!--   <div class="plot-item" id="walker"> -->
-          <!--     <p>Bouncing ball</p> -->
-          <!--     <iframe src="ball.html" width="100%" height="96%"></iframe> -->
-          <!--   </div> -->
-          <!-- </div> -->
-          <!-- <div class="plot-container"> -->
-          <!--   <div class="plot-item" id="walker"> -->
-          <!--     <p>Ballon with wind</p> -->
-          <!--     <iframe src="ballon.html" width="100%" height="96%"></iframe> -->
-          <!--   </div> -->
-          <!-- </div> -->
-          <!-- <div class="plot-container"> -->
-          <!--   <div class="plot-item" id="walker"> -->
-          <!--     <p>Liquid</p> -->
-          <!--     <iframe src="liquid.html" width="100%" height="96%"></iframe> -->
-          <!--   </div> -->
-          <!-- </div> -->
-
-
+          <div class="plot-container">
+            <div class="plot-item" id="walker">
+              <p>Bouncing ball</p>
+              <iframe src="ball.html" width="100%" height="96%"></iframe>
+            </div>
+          </div>
+          <div class="plot-container">
+            <div class="plot-item" id="walker">
+              <p>Ballon with wind</p>
+              <iframe src="ballon.html" width="100%" height="96%"></iframe>
+            </div>
+          </div>
+          <div class="plot-container">
+            <div class="plot-item" id="walker">
+              <p>Liquid</p>
+              <iframe src="liquid.html" width="100%" height="96%"></iframe>
+            </div>
+          </div>
           <div class="plot-container">
             <div class="plot-item" id="walker">
               <p>Gravity</p>
