--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
         <li>
           <a href="0. Randomness/index.html">0. Randomness</a>
         </li>
-      </ul>
         <li>
           <a href="1. Vectors/index.html">1. Vectors</a>
         </li>
+        <li>
+          <a href="3. Oscillation/index.html">3. Oscillation</a>
+        </li>
+      </ul>
     </div>
 
   </main>
