--- a/3. Oscillation/index.html
+++ b/3. Oscillation/index.html
@@ -16,10 +16,16 @@
     <main>
       <div>
         <div class="plots-grid double-column">
+          <!-- <div class="plot-container"> -->
+          <!--   <div class="plot-item" id="walker"> -->
+          <!--     <p>Follow mouse</p> -->
+          <!--     <iframe src="follow_mouse.html" width="100%" height="96%"></iframe> -->
+          <!--   </div> -->
+          <!-- </div> -->
           <div class="plot-container">
-            <div class="plot-item" id="walker">
-              <p>Follow mouse</p>
-              <iframe src="follow_mouse.html" width="100%" height="96%"></iframe>
+            <div class="plot-item-h80" id="walker">
+              <p>Waves</p>
+              <iframe src="waves.html" width="100%" height="96%"></iframe>
             </div>
           </div>
         </div>
