--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <li>
           <a href="3. Oscillation/index.html">3. Oscillation</a>
         </li>
+        <li>
+          <a href="flow-field/index.html">Flow Field</a>
+        </li>
       </ul>
     </div>
 
