--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <li>
           <a href="flow-field/index.html">Flow Field</a>
         </li>
+        <li>
+          <a href="nodes/index.html">Nodes</a>
+        </li>
       </ul>
     </div>
 
