--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <li>
           <a href="nodes/index.html">Nodes</a>
         </li>
+        <li>
+          <a href="moving-line/index.html">Moving line</a>
+        </li>
       </ul>
     </div>
 
