--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
           <a href="nodes/index.html">Nodes</a>
         </li>
         <li>
+          <a href="random-nodes/index.html">Random nodes</a>
+        </li>
+        <li>
           <a href="moving-line/index.html">Moving line</a>
         </li>
       </ul>
