--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
         <li>
           <a href="moving-line/index.html">Moving line</a>
         </li>
+        <li>
+          <a href="trig-mov/index.html">Trigonometry moves</a>
+        </li>
+        <li>
+          <a href="curves/index.html">Curves</a>
+        </li>
       </ul>
     </div>
 
