--- a/flow-field/index.html
+++ b/flow-field/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
   <script src="../p5/p5.js"></script>
-  <script src="sketch.js"></script>
+  <!-- <script src="flowfield.js"></script> -->
+  <!-- <script src="flowfield2.js"></script> -->
+  <!-- <script src="flowfield3.js"></script> -->
+  <script src="sin-flow.js"></script>
   <script src="particle.js"></script>
 </head>
 
