--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
           <a href="curves/index.html">Curves</a>
         </li>
       </ul>
+      <br>
+      <ul>
+        <li>
+          <a href="1/index.html">1</a>
+        </li>
+
+      </ul>
     </div>
 
   </main>
