--- a/index.html
+++ b/index.html
@@ -45,11 +45,17 @@
         <li>
           <a href="curves/index.html">Curves</a>
         </li>
+        <li>
+          <a href="fractals/index.html">Fractals</a>
+        </li>
       </ul>
       <br>
       <ul>
         <li>
           <a href="1/index.html">1</a>
+        </li>
+        <li>
+          <a href="math-rose/index.html">Math rose</a>
         </li>
 
       </ul>
