--- a/index.html
+++ b/index.html
@@ -47,9 +47,15 @@
         </li>
       </ul>
       <br>
-      <ul>
+      <ul style="  list-style-type: none;">
         <li>
           <a href="1/index.html">1</a>
+        </li>
+        <li>
+          <a href="random-figures/index.html">Random figures</a>
+        </li>
+        <li>
+          <a href="random-geometry/index.html">Random geometry</a>
         </li>
 
       </ul>
